--- a/hello-world.html
+++ b/hello-world.html
@@ -6,18 +6,17 @@
 <meta charset="utf-8">
 <title>Hello...</title>
 <style type="text/css">
-
-
 </style>
 </head>
 
 <body>
-	<input></input>
+
 <div id="mainContent">
 <p id="helloText"></p>
-<button id="clickButton" class="buttonStyle">click me</button>
+<script src="http://platform.fatsecret.com/js?key=5b48311ef6894ad5b0128e1815a34a16&auto_load=true"></script>
 
 </div>
 
 </body>
 </html>
+
